Fixes for scrollbar

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,7 +4,7 @@
     padding:30px 80px 40px 30px;
     position: relative;
     box-sizing: border-box;
-    background-image: url("/images/background_header.svg");
+    background-image: url("../images/background_header.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -34,7 +34,6 @@
     color: #000000;
   }
 
-  
   .nav__link:hover {
     color: #2f80ed;
   }
@@ -48,7 +47,7 @@
     font-weight: 400;
   }
 
-  .header__title-top{
+  .header__title_decorated{
       display: block;
       color: #2f80ed;
       font-family: 'Noto Serif' ,'Times New Roman' ,serif;
@@ -57,6 +56,7 @@
   }
   
   .header__description {
+    font-family: 'Noto Serif' ,'Times New Roman' ,serif;
     font-size: 20px;
     line-height: 30px;
     margin: 28px 0 0 50px;
@@ -75,18 +75,19 @@
   
   .header__footer {
     position: absolute;
-    /* left: 80px; */
+    left: 0;
     bottom: 40px;
     width: 100%;
     display: flex;
     align-items: flex-end;
-    padding: 40px 80px 0 50px;
+    padding: 40px 80px 0;
     justify-content: space-between;
     box-sizing: border-box;
     color: #838383;
     font-weight:500;
     
   }
+
 
   .header__column-heading {
     font-weight:500;
