--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,7 +1,7 @@
 .menu{
     padding: 100px;
     background-color: #0a2750;
-    background-image: url("/images/background_menu.svg");
+    background-image: url("../images/background_menu.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
